# osrs-api

./: Cargo.toml  README.md
examples/: regular.rs
src/: gamemode.rs  hiscore.rs  lib.rs  skill.rs
