[package]
name = "osrs-api"
version = "0.1.0"
authors = ["Kenneth Tubman V <kentubman5@gmail.com>"]
edition = "2018"
description = "An Oldschool Runescape API Wrapper"
repository = "https://github.com/Meantub/osrs-api"
readme = "README.md"
license = "MIT"
keywords = ["osrs", "mmo", "osrs-api", "oldschool", "runescape"]
categories = ["api-bindings", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "1.5.2"
csv = "1"
serde = "1.0.117"
prettytable-rs = "0.8"
thousands = "0.2.0"